// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadWorkflow renders correctly 1`] = `
<div class="vd-upload-workflow white" style="width: 100%;">
  <h4 class="text-h6 mb-2">
    Documents à nous transmettre
  </h4>
  <filelist-stub files="[object Object],[object Object]" optionalfiletext="Document facultatif" width="100%"></filelist-stub>
  <fileupload-stub class="mt-6"></fileupload-stub>
  <dialogbox-stub title="Fichier transmis" persistent="true" width="550">
    <vform-stub class="mb-2">
      <vselect-stub errorcount="1" errormessages="" messages="" rules="[Function]" successmessages="" validateonblur="true" value="" appendicon="$dropdown" backgroundcolor="" label="Nature du fichier" loaderheight="2" clearicon="$clear" outlined="true" type="text" valuecomparator="[Function]" nodatatext="$vuetify.noDataText" items="[object Object],[object Object]" itemcolor="primary" itemdisabled="disabled" itemtext="text" itemvalue="value" menuprops="[object Object]"></vselect-stub>
    </vform-stub>
    <!---->
  </dialogbox-stub>
</div>
`;

exports[`UploadWorkflow renders correctly with a single file 1`] = `
<div class="vd-upload-workflow white" style="width: 100%;">
  <h4 class="text-h6 mb-2">
    Document à nous transmettre
  </h4>
  <filelist-stub files="[object Object]" optionalfiletext="Document facultatif" width="100%"></filelist-stub>
  <fileupload-stub class="mt-6"></fileupload-stub>
  <dialogbox-stub title="Fichier transmis" persistent="true" width="550">
    <vform-stub class="mb-2">
      <vselect-stub errorcount="1" errormessages="" messages="" rules="[Function]" successmessages="" validateonblur="true" value="" appendicon="$dropdown" backgroundcolor="" label="Nature du fichier" loaderheight="2" clearicon="$clear" outlined="true" type="text" valuecomparator="[Function]" nodatatext="$vuetify.noDataText" items="[object Object]" itemcolor="primary" itemdisabled="disabled" itemtext="text" itemvalue="value" menuprops="[object Object]"></vselect-stub>
    </vform-stub>
    <!---->
  </dialogbox-stub>
</div>
`;
